# word2vec_commented

./: .gitignore  CMakeLists.txt  demo.txt  word-analogy.c  word2vec.c
python/: gen_fake_data.py
